# CMakeLists.txt
# Copyright (C) orcaer@yeah.net. All rights reserved.
# Last modified: 2019-9-3

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(uv_cpp)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ /usr/local/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/uv  SOURCES)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/uv/http  SOURCES)

LINK_DIRECTORIES(/usr/local/lib)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11   -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -O2")


MESSAGE("building...")

ADD_LIBRARY (${PROJECT_NAME} SHARED ${SOURCES} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} "libuv.a" -pthread)

INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/uv
    DESTINATION include
    FILES_MATCHING PATTERN "*.h*")
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
